--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -613,6 +613,13 @@ defaults:
         size: large
         shell: bash.exe
 
+  - eof_ubuntu2204_small: &eof_ubuntu2204_small
+      <<: *base_cimg_small
+      resource_class: small
+      environment:
+        TERM: xterm
+        MAKEFLAGS: -j 5
+
   # --------------------------------------------------------------------------
   # Workflow Templates
 
@@ -1247,6 +1254,42 @@ jobs:
     steps:
       - soltest_all
 
+  t_ubu_soltest_eof: &t_ubu_soltest_eof
+    <<: *eof_ubuntu2204_small
+    parallelism: 50
+    steps:
+      - run:
+          name: Install build dependencies
+          command: |
+            dist=$(grep DISTRIB_CODENAME /etc/lsb-release | cut -d= -f2); \
+            echo "deb http://ppa.launchpad.net/ethereum/cpp-build-deps/ubuntu $dist main" | sudo tee -a /etc/apt/sources.list > /dev/null
+
+            sudo apt-key adv --keyserver keyserver.ubuntu.com --recv-keys 1c52189c923f6ca9
+            sudo apt-get update
+            sudo apt-get install -qqy --no-install-recommends \
+                build-essential \
+                software-properties-common \
+                cmake ninja-build \
+                libboost-filesystem-dev libboost-test-dev libboost-system-dev \
+                libboost-program-options-dev \
+                libcvc4-dev libz3-static-dev z3-static jq
+            sudo rm -rf /var/lib/apt/lists/*
+      - run:
+          name: Build evmone based on EOF branch
+          command: |
+            ( cd /usr/src; \
+            sudo git clone --branch="eof" --recurse-submodules https://github.com/ethereum/evmone.git; \
+            cd evmone; \
+            sudo mkdir build; \
+            cd build; \
+            sudo cmake -G Ninja -DBUILD_SHARED_LIBS=ON -DCMAKE_INSTALL_PREFIX="/usr" ..; \
+            sudo ninja; \
+            sudo ninja install/strip; \
+            sudo rm -rf /usr/src/evmone )
+      - checkout
+      - run: *run_build
+      - run: *run_soltest
+
   t_ubu_soltest_deprecated_evm_versions: &t_ubu_soltest_deprecated_evm_versions
     <<: *base_ubuntu2204_large
     parallelism: 50
@@ -1864,6 +1907,7 @@ workflows:
       - b_ubu_clang: *requires_nothing
       - t_ubu_clang_soltest: *requires_b_ubu_clang
       - t_ubu_lsp: *requires_b_ubu
+      - t_ubu_soltest_eof: *workflow_trigger_on_tags
 
       # Ubuntu fake release build and tests
       - b_ubu_force_release: *requires_nothing
