--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1258,6 +1258,7 @@ jobs:
     <<: *eof_ubuntu2204_small
     environment:
       CMAKE_OPTIONS: -DUSE_CVC4=OFF
+      EVM: "shanghai"
     parallelism: 50
     steps:
       - run:
