--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1265,7 +1265,7 @@ jobs:
           name: Build evmone based on EOF branch
           command: |
             ( cd /usr/src; \
-            git clone --branch="eof" --recurse-submodules https://github.com/ethereum/evmone.git; \
+            git clone --branch="eof-functions-bak3" --recurse-submodules https://github.com/ethereum/evmone.git; \
             cd evmone; \
             mkdir build; \
             cd build; \
